# oxideav-g722

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: aux_channel.rs  decode_stream.rs  encode_roundtrip.rs  pcm16_convention.rs  subband_bypass.rs
src/: aux_data.rs  band_high.rs  band_low.rs  conformance.rs  decoder.rs  encoder.rs  lib.rs  mode.rs  predictor.rs  qmf.rs  robustness.rs  tables.rs  test_harness.rs  transmission.rs
src/transmission/: anti_aliasing_filter.rs  attenuation_distortion.rs  gain_variation.rs  group_delay_distortion.rs  mod.rs  reconstructing_filter.rs  signal_to_distortion.rs  signal_to_distortion_frequency.rs  spectrum.rs
tests/: adpcm_determinism.rs  aux_channel.rs  codec_roundtrip.rs  codec_silence.rs  itu_conformance.rs
tests/data/: codspw-prefix.g722  inpsp-prefix.pcm  outsp1-prefix.pcm  outsp2-prefix.pcm  outsp3-prefix.pcm
