[package]
name = "oxideav-g722"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-g722"
authors = ["Mark Karpeles"]
description = "Pure-Rust ITU-T G.722 wideband sub-band ADPCM codec (64 / 56 / 48 kbit/s)"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-g722"
keywords = ["multimedia", "audio", "g722", "telephony", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.0"
oxideav-codec = "0.0"
