[package]
name = "oxideav-g722"
version = "0.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-g722"
authors = ["Mark Karpeles"]
description = "Pure-Rust ITU-T G.722 wideband sub-band ADPCM codec (64 / 56 / 48 kbit/s)"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-g722"
keywords = ["multimedia", "audio", "g722", "telephony", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
